[gd_scene load_steps=14 format=3 uid="uid://bf6koeuf0he2t"]

[ext_resource type="Script" uid="uid://bpoxmf71xslk6" path="res://scripts/invetario.gd" id="1_3ee8g"]
[ext_resource type="Script" uid="uid://ofbeefpeh01o" path="res://scripts/player_customization.gd" id="1_vfbku"]
[ext_resource type="Texture2D" uid="uid://bj2dckfe0s2an" path="res://CharacterSprites/Body/body_1.png" id="2_voeqa"]
[ext_resource type="Texture2D" uid="uid://bfehvhr7stacf" path="res://CharacterSprites/Hair/hair (1).png" id="3_4h4ys"]
[ext_resource type="Texture2D" uid="uid://21q8d7mh05k4" path="res://CharacterSprites/Outfit/outfit (4).png" id="4_5kdp8"]
[ext_resource type="FontFile" uid="uid://dwub7qum41gaq" path="res://UI/Planes_ValMore.ttf" id="4_7t3ny"]
[ext_resource type="PackedScene" uid="uid://vbu0fvbbrd75" path="res://cenas/item_slot.tscn" id="7_jy1ed"]
[ext_resource type="Texture2D" uid="uid://bg1vd0emfbnea" path="res://UI/Cute RPG - Icons (1)/Cute RPG - Icons/16x16/CuteRPG_Icons06.png" id="8_cx3qh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54omu"]
bg_color = Color(0.683501, 0.86698, 0.957087, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.226546, 0.136491, 0.0186529, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sosyx"]
size = Vector2(12, 28)

[sub_resource type="LabelSettings" id="LabelSettings_apmlk"]
font = ExtResource("4_7t3ny")
font_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qog3r"]
texture = ExtResource("8_cx3qh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0

[sub_resource type="TileSet" id="TileSet_gar06"]
sources/0 = SubResource("TileSetAtlasSource_qog3r")

[node name="Invetario" type="Node2D"]
script = ExtResource("1_3ee8g")

[node name="Panel" type="Panel" parent="."]
offset_left = 120.0
offset_top = 88.0
offset_right = 202.0
offset_bottom = 216.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_54omu")
metadata/_edit_use_anchors_ = true

[node name="PlayerCustomization" type="CharacterBody2D" parent="Panel"]
position = Vector2(40, 48)
script = ExtResource("1_vfbku")

[node name="Body" type="Sprite2D" parent="Panel/PlayerCustomization"]
texture = ExtResource("2_voeqa")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/PlayerCustomization"]
visible = false
position = Vector2(245, 172)
shape = SubResource("RectangleShape2D_sosyx")

[node name="Hair" type="Sprite2D" parent="Panel/PlayerCustomization"]
z_index = 4
position = Vector2(0, -10)
texture = ExtResource("3_4h4ys")
hframes = 8
vframes = 8
frame = 1

[node name="Outfit" type="Sprite2D" parent="Panel/PlayerCustomization"]
texture = ExtResource("4_5kdp8")
hframes = 8
vframes = 8

[node name="Sword" type="Sprite2D" parent="Panel/PlayerCustomization"]

[node name="Shield" type="Sprite2D" parent="Panel/PlayerCustomization"]

[node name="Spear" type="Sprite2D" parent="Panel/PlayerCustomization"]
position = Vector2(-5.24521e-06, 0)

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -18.0
offset_top = 8.0
offset_right = 98.0
offset_bottom = 31.0
text = "INVENTORY"
label_settings = SubResource("LabelSettings_apmlk")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 47.0
offset_right = 25.0
offset_bottom = 65.0
mouse_filter = 2

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 55.0
offset_top = 47.0
offset_right = 73.0
offset_bottom = 65.0
mouse_filter = 2

[node name="Item" parent="." groups=["draggable_items", "sword_basic"] instance=ExtResource("7_jy1ed")]
z_index = 700
position = Vector2(136, 144)

[node name="Item3" parent="." groups=["draggable_items", "spear_basic"] instance=ExtResource("7_jy1ed")]
z_index = 700
position = Vector2(136, 144)

[node name="Item2" parent="." groups=["draggable_items", "shield_basic"] instance=ExtResource("7_jy1ed")]
z_index = 700
position = Vector2(184, 144)

[node name="sword_slot_empty" type="TileMapLayer" parent="."]
z_index = 5
position = Vector2(0, -8)
tile_map_data = PackedByteArray(0, 0, 8, 0, 9, 0, 0, 0, 10, 0, 3, 0, 0, 0)
tile_set = SubResource("TileSet_gar06")

[node name="shield_slot_empty" type="TileMapLayer" parent="."]
z_index = 5
position = Vector2(0, -8)
tile_map_data = PackedByteArray(0, 0, 11, 0, 9, 0, 0, 0, 10, 0, 6, 0, 0, 0)
tile_set = SubResource("TileSet_gar06")
